Fixed spacing

--- a/css/beer.css
+++ b/css/beer.css
@@ -125,7 +125,7 @@ SEARCH RESULTS
 /* Form */
 #change-beer-preference {
 	margin-top: 10px;
-	margin-left: 10px;
+	margin-left: 15px;
 }
 
 /* Button */
